--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"canvas": "^2.11.2",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"nodemon": "^2.0.22",
 		"ts-node": "^10.9.1",
