--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es2016",
-		"module": "es6",
+		"target": "ES2018",
+		"module": "commonjs",
 		"outDir": "dist",
 		"strict": true,
 		"esModuleInterop": true,
