--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"express": "^4.18.2",
 		"nodemon": "^3.0.1",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"winston": "^3.10.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
