--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"canvas": "^2.11.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"nodemon": "^3.0.1",
@@ -22,6 +23,7 @@
 		"winston": "^3.10.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.14",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.4.3",
 		"prettier": "^3.0.0"
