update stats * dependency upgrade * cents respectivly

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-twitch application access token to send authenticated request to twitch helix api
+# twitch application access token to send authenticated request to twitch helix api
 TWITCH_ACCESS_TOKEN=
 
-twitch client id to identify applications
+# twitch client id to identify applications
 TWITCH_CLIENT_ID=
